<resources>
    <string name="exit">Exit</string>
    <string name="selectLevel">Select Level</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_name">CAPTAIN CODE</string>
    <string name="help_dialog_title">Caption Code Info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Help">Help</string>
    <string name="level">Level</string>
    <string name="hint">Give me a hint</string>
    <string name="submit">Check answer</string>
    <string name="hello_blank_fragment">answer</string>
    <string name="controls">Controls</string>
    <string name="level_select"><u>Level Select</u></string>
    <string name="level_1">Level One</string>
    <string name="level_2">Level Two</string>
    <string name="level_3">Level Three</string>
    <string name="correct">That\'s right, good job!</string>
    <string name="wrong">That\'s not quite right, try again.</string>
    <string name="dialogTitle">You beat the level!</string>
    <string name="nextLevel">Next Level</string>
    <string name="returnMain">Return to Menu</string>
    <string name="instructions">Fill in the blank or select one of the options and press check!\nIf you get stuck use one of the hints!</string>
    <string name="howTo">How to play</string>
    <string name="descMap">Pirate Map</string>
    <string name="descBack">Back button</string>
    <string name="descPirate">Pirate Pete</string>
    <string name="notes">Notes</string>
    <string name="about">About</string>
    <string name="appInfo">Version 1.0 \nby Taite LaGrange, Arhan Ikram, Derek Marshall, Rebecca Knezy, and Joanne Bui</string>
    <string name="save">Save Note</string>
    <string name="newNote">New Note</string>
    <string name="noteBlurb">You can enter your own notes here on concepts or syntax you\'re struggling with. Tap a note for more information. Hold a note to remove it.</string>
    <string name="delete">Delete this note?</string>
    <string name="skinChange">Skin change successful</string>
    <string name="checked_on">SFX on</string>
    <string name="checked_off">SFX off</string>
</resources>