<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/treasure_map"
    android:backgroundTint = "#9986D7DD"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    tools:context=".LevelSelect">

    <ImageButton
        android:id="@+id/levelPrevious"
        android:contentDescription="@string/descBack"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="168dp"
        android:background="#4D03DAC5"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@android:id/background"
        app:layout_constraintRight_toLeftOf="@android:id/background"/>

    <Button
        android:id="@+id/level_1_button"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="168dp"
        android:text="@string/level_1"
        android:background="#BF03DAC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/level_2_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/level_2_button"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="168dp"
        android:text="@string/level_2"
        android:background="#BF03DAC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/level_3_button"
        app:layout_constraintStart_toEndOf="@+id/level_1_button" />

    <Button
        android:id="@+id/level_3_button"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="168dp"
        android:text="@string/level_3"
        android:background="#BF03DAC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/level_2_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level_menu_title"
        android:layout_width="218dp"
        android:layout_height="83dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="108dp"
        android:gravity="center"
        android:text="@string/level_select"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/level_2_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>