<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notesDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity"
        android:baselineAligned="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#E686D7DD"
            android:layout_alignParentTop="true"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <FrameLayout
            android:id="@+id/game"
            android:layout_width="385dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/image_button"
            android:layout_below = "@id/toolbar"/>

        <ImageView
            android:id="@+id/image_button"
            android:layout_width="346dp"
            android:layout_height="match_parent"
            android:background = "#E688EBE1"
            android:contentDescription="@string/descMap"
            app:srcCompat="@drawable/pirate_map_bg"
            android:scaleType="fitXY"
            android:layout_below = "@id/toolbar"/>

        <ImageView
            android:id="@+id/imagePirate"
            android:layout_width="158dp"
            android:layout_height="137dp"
            android:layout_toLeftOf = "@id/game"
            android:layout_alignParentLeft = "true"
            android:layout_gravity = "center_horizontal"
            android:layout_centerVertical="true"
            android:contentDescription="@string/descPirate"
            app:srcCompat="@drawable/pirate" />

        <ImageButton
            android:id="@+id/gamePrevious"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@id/image_button"
            android:contentDescription="@string/descBack"
            android:background="#E686D7DD"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


    </RelativeLayout>
    <ListView
    android:id="@+id/notesListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background = "#80FFFFFF"
    android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>

