<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".GameControlsFragment">

    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:text="@string/level"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/promptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelTitle"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:text=""
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gameText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/promptText"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:text="@string/hello_blank_fragment"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/enterText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/gameText1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/gameText1"
        android:autofillHints="@string/hello_blank_fragment"
        android:hint="@string/hello_blank_fragment"
        android:inputType="text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameText1"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:text="@string/hello_blank_fragment"
        android:textSize="15sp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/enterText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/gameText2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/gameText2"
        android:autofillHints="@string/hello_blank_fragment"
        android:hint="@string/hello_blank_fragment"
        android:inputType="text"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/gameText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameText2"
        android:layout_above = "@id/hintButton"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:text="@string/hello_blank_fragment"
        android:textSize="15sp"
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/dropSelect1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameText2"
        android:layout_toEndOf="@id/gameText3"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:padding="0dp"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/hintButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_above="@+id/levelCompletionBar"
        android:layout_alignStart="@id/levelCompletionBar"
        android:padding="0dp"
        android:layout_marginBottom="25dp"
        android:background="#E686D7DD"
        android:text="@string/hint"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_above="@+id/levelCompletionBar"
        android:layout_alignEnd="@id/levelCompletionBar"
        android:layout_marginBottom="25dp"
        android:background="#E686D7DD"
        android:padding="0dp"
        android:text="@string/submit"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/levelCompletionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:minHeight="15dp"
        android:progress="0"
        android:progressBackgroundTint="#E686D7DD"
        android:progressTint="@color/colorPrimary" />


</RelativeLayout>